# SlurmSlim

./: README.md  client.py  pyproject.toml  server.py
